# prim-and-kruskal

./: .gitignore  CMakeLists.txt  README.md
input/: data.txt
src/: Edge.cpp  Edge.h  Graph.cpp  Graph.h  IndexedPriorityQueue.cpp  IndexedPriorityQueue.h  MST_Algos.cpp  MST_Algos.h  UnionFind.cpp  UnionFind.h  main.cpp
